Added additional projects for AI prediction

--- a/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
+++ b/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
@@ -23,5 +23,11 @@
       <ProjectReference Include="..\Firestore\Firestore.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="wwwroot\boyum-foosball-stats-firebase-adminsdk-5uxh1-73429a3147.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 
 </Project>
