--- a/BoyumFoosballStats-2.0.Test/BoyumFoosballStats-2.0.Test.csproj
+++ b/BoyumFoosballStats-2.0.Test/BoyumFoosballStats-2.0.Test.csproj
@@ -24,6 +24,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BoyumFoosballStats-2.0.Shared\BoyumFoosballStats-2.0.Shared.csproj" />
+      <ProjectReference Include="..\BoyumFoosballStats.Ai\BoyumFoosballStats.Ai.csproj" />
+      <ProjectReference Include="..\FireStorage\FireStorage.csproj" />
       <ProjectReference Include="..\Firestore\Firestore.csproj" />
     </ItemGroup>
 
