--- a/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
+++ b/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
@@ -1,28 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>BoyumFoosballStats-2</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all" />
-        <PackageReference Include="MudBlazor" Version="6.10.0" />
+        <PackageReference Include="MudBlazor" Version="5.0.15" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
-
-    <ItemGroup>
-      <AdditionalFiles Include="Pages\Shared\MainLayout.razor" />
-      <AdditionalFiles Include="Pages\Shared\NavMenu.razor" />
-    </ItemGroup>
-
     <ItemGroup>
       <ProjectReference Include="..\BoyumFoosballStats-2.0.Shared\BoyumFoosballStats-2.0.Shared.csproj" />
       <ProjectReference Include="..\BoyumFoosballStats.Ai\BoyumFoosballStats.Ai.csproj" />
-      <ProjectReference Include="..\Firestore\Firestore.csproj" />
     </ItemGroup>
-
 
 </Project>
