Switched to using CosmosDb instead of Firestore

--- a/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
+++ b/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Firestore\Firestore.csproj" />
+      <ProjectReference Include="..\CosmosDb\CosmosDb.csproj" />
     </ItemGroup>
 
 </Project>
