--- a/BoyumFoosballStats.Ai/BoyumFoosballStats.Ai.csproj
+++ b/BoyumFoosballStats.Ai/BoyumFoosballStats.Ai.csproj
@@ -30,6 +30,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BoyumFoosballStats-2.0.Shared\BoyumFoosballStats-2.0.Shared.csproj" />
-    <ProjectReference Include="..\FireStorage\FireStorage.csproj" />
+    <ProjectReference Include="..\BoyumFoosballStats.BlobStorage\BoyumFoosballStats.BlobStorage.csproj" />
   </ItemGroup>
 </Project>
