--- a/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
+++ b/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <ProjectReference Include="..\BoyumFoosballStats-2.0.Shared\BoyumFoosballStats-2.0.Shared.csproj" />
       <ProjectReference Include="..\BoyumFoosballStats.Ai\BoyumFoosballStats.Ai.csproj" />
+      <ProjectReference Include="..\CosmosDb\CosmosDb.csproj" />
     </ItemGroup>
 
 </Project>
