--- a/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
+++ b/BoyumFoosballStats-2.0/BoyumFoosballStats-2.0.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Identity" Version="1.10.1" />
+        <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="MudBlazor" Version="6.10.0" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
