Implemented match balancing button

--- a/BoyumFoosballStats-2.0/appsettings.json
+++ b/BoyumFoosballStats-2.0/appsettings.json
@@ -13,7 +13,7 @@
     "DatabaseName": "BoyumFoosballStats"
   },
   "BlobStorageSettings": {
-    "BloblUrl" : "",
+    "BlobUrl": "",
     "ContainerName" : "foosballmatches"
   },
   "AllowedHosts": "*"
