Implemented TrueSkill rating + added calculations to migrations

--- a/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
+++ b/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CosmosDb\CosmosDb.csproj" />
+      <ProjectReference Include="..\TrueSkill\TrueSkill.csproj" />
     </ItemGroup>
 
 </Project>
