--- a/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
+++ b/BoyumFoosballStats-2.0.Shared/BoyumFoosballStats-2.0.Shared.csproj
@@ -14,11 +14,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.11" />
+        <PackageReference Include="Moserware.Skills" Version="1.0.0.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\CosmosDb\CosmosDb.csproj" />
-      <ProjectReference Include="..\TrueSkill\TrueSkill.csproj" />
     </ItemGroup>
+
 
 </Project>
