--- a/BoyumFoosballStats-2.0.Test/BoyumFoosballStats-2.0.Test.csproj
+++ b/BoyumFoosballStats-2.0.Test/BoyumFoosballStats-2.0.Test.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Azure.Identity" Version="1.10.1" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+        <PackageReference Include="Moserware.Skills" Version="1.0.0.1" />
         <PackageReference Include="xunit" Version="2.5.1-pre.33" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
