--- a/BoyumFoosballStats/BoyumFoosballStats.csproj
+++ b/BoyumFoosballStats/BoyumFoosballStats.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="Moserware.Skills" Version="1.0.0.1" />
         <PackageReference Include="MudBlazor" Version="6.10.0" />
+        <PackageReference Include="Radzen.Blazor" Version="4.16.3" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
     <ItemGroup>
